--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   firebase_core: ^3.1.0
   firebase_auth: ^5.1.0
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
